Add basic user module
